# everybody-codes-rust

./: Cargo.toml  README.md  test.txt
.cargo/: config.toml
src/: main.rs  template.txt
src/template/: day.rs  ec_cli.rs  mod.rs  readme_benchmarks.rs  run_multi.rs  runner.rs  timings.rs
src/template/commands/: download.rs  read.rs  scaffold.rs  solve.rs
